--- a/src/app/static/css/base.css
+++ b/src/app/static/css/base.css
@@ -66,16 +66,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 3rem;
-    font-weight: 800;
+    font-size: 3rem !important;
+    font-weight: 800 !important;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 2rem !important;
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
 }
 
 p {
