--- a/src/app/static/css/light.css
+++ b/src/app/static/css/light.css
@@ -49,7 +49,7 @@
 
 .stApp[data-theme="light"]::before {
     content: '';
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
